# openpr-webhook

./: .gitignore  Cargo.toml  README.md  clippy.toml  config.example.toml  deny.toml
.github/workflows/: ci.yml  release.yml  sec-audit.yml
scripts/: dev.openpr.webhook.plist.template  install.sh  openpr-webhook.service.template  uninstall.sh
src/: callback.rs  config.rs  dispatcher.rs  handler.rs  main.rs  signature.rs  tunnel.rs
