[package]
name = "openpr-webhook"
version = "0.3.0"
edition = "2024"
authors = ["g1e2x87"]
license = "MIT OR Apache-2.0"
description = "GitHub webhook relay service for OpenPR"
repository = "https://github.com/openprx/openpr-webhook"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
futures-util = "0.3"
tokio-tungstenite = "0.28"
uuid = { version = "1", features = ["v4", "serde"] }

[lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
indexing_slicing = "deny"

dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
undocumented_unsafe_blocks = "deny"

inefficient_to_string = "deny"
large_futures = "warn"

module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_precision_loss = "warn"
cast_lossless = "warn"
too_many_lines = "allow"
